# koffice-chartingshape

./: CMakeLists.txt
chartshape/: Axis.cpp  Axis.h  CMakeLists.txt  CellRegion.cpp  CellRegion.h  CellRegionStringValidator.cpp  CellRegionStringValidator.h  ChartConfigWidget.cpp  ChartConfigWidget.h  ChartConfigWidget.ui  ChartDocument.cpp  ChartDocument.h  ChartProxyModel.cpp  ChartProxyModel.h  ChartShape.cpp  ChartShape.h  ChartShapeFactory.cpp  ChartShapeFactory.h  ChartTableModel.cpp  ChartTableModel.h  ChartTableView.cpp  ChartTableView.h  ChartTool.cpp  ChartTool.h  ChartToolFactory.cpp  ChartToolFactory.h  DataSet.cpp  DataSet.h  KDChartConvertions.cpp  KDChartConvertions.h  KDChartModel.cpp  KDChartModel.h  Layout.cpp  Layout.h  Legend.cpp  Legend.h  OdfLoadingHelper.cpp  OdfLoadingHelper.h  PlotArea.cpp  PlotArea.h  (+21 more)
chartshape/commands/: ChartTypeCommand.cpp  ChartTypeCommand.h
chartshape/dialogs/: AxisScalingDialog.cpp  AxisScalingDialog.h  CellRegionDialog.cpp  CellRegionDialog.h  NewAxisDialog.cpp  NewAxisDialog.h  TableEditorDialog.cpp  TableEditorDialog.h
chartshape/tests/: CMakeLists.txt  ModelObserver.cpp  TestCellRegion.cpp  TestCellRegion.h  TestDataSet.cpp  TestDataSet.h  TestKDChartModel.cpp  TestKDChartModel.h  TestProxyModel.cpp  TestProxyModel.h  TestTableSource.cpp  TestTableSource.h
chartshape/tests/odf/: TestLoadingBase.cpp  TestLoadingBase.h
chartshape/tests/odf/bubble-chart/: CMakeLists.txt  TestLoading.cpp  TestLoading.h
chartshape/tests/odf/bug239802/: CMakeLists.txt  TestLoading.cpp  TestLoading.h
chartshape/tests/odf/default-koffice-chart/: CMakeLists.txt  TestLoading.cpp  TestLoading.h
chartshape/tests/odf/default-ooo-chart/: CMakeLists.txt  TestLoading.cpp  TestLoading.h
chartshape/tests/odf/me07_percentage_stacked_bar_chart/: CMakeLists.txt  TestLoading.cpp  TestLoading.h
chartshape/tests/odf/template/: CMakeLists.txt  TestLoading.cpp  TestLoading.h
doc/: index.docbook
filters/genericimageexport/: genericimageexport.cpp  kchart_bmp_export.desktop  kchart_jpeg_export.desktop  kchart_mng_export.desktop  kchart_png_export.desktop  kchart_xbm_export.desktop  kchart_xpm_export.desktop
filters/svg/: CMakeLists.txt  kchart_svg_export.desktop  svgexport.cc
kchart/: KChartCanvas.h  KChartFactory.h  KChartPart.h  KChartView.h  KChartViewAdaptor.h  kchart.desktop  kchartpart.desktop
kchart/dialogs/: KCPageLayout.h  KCPrinterDialog.h
kchart/templates/: .directory  BarChart.desktop  Empty.desktop
kchart/tests/: ModelObserver.h  TestProxyModel.h
